--- a/public/pages/Calculadora/calculadora.css
+++ b/public/pages/Calculadora/calculadora.css
@@ -6,3 +6,28 @@ body {
 .container-fluid {
     width: 60%;
 }
+
+.div-principal {
+    display: flex;
+    justify-content: space-between;
+    width: 80%;
+    margin-top: 50px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.div-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.btn {
+    margin-top: 30px;
+    width: 200px;
+}
+
+#img-calculadora {
+    height: 350px;
+}
