--- a/public/pages/Calculadora/calculadora.css
+++ b/public/pages/Calculadora/calculadora.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Anybody:ital@1&display=swap');
+
 body {
     background-color: #DEDEDE;
     font-family: 'Anybody', cursive;
